--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "e2e": "ng e2e",
     "docs": "compodoc -p src/tsconfig.app.json -d docs",
     "docs:serve": "compodoc -p src/tsconfig.app.json -d docs -s",
-    "prepush": "npm run lint:ci"
+    "prepush": "npm run"
   },
   "dependencies": {
     "@agm/core": "1.0.0-beta.0",
